<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/color_main"
            android:id="@+id/relativeLayout">

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.071"
            android:id="@+id/circleImageView"/>

    <LinearLayout
            android:layout_width="400dp"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:weightSum="3"
            android:id="@+id/linearLayout">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/linearLayout1"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/text_photo"
                    android:textSize="@dimen/_10ssp"
                    android:gravity="center"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/text_quanlity_photo"
                    android:textSize="@dimen/_10ssp"
                    android:gravity="center"
                    android:textColor="@color/color_main"
                    android:textStyle="bold"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/linearLayout2"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/text_follow_main"
                    android:textSize="@dimen/_10ssp"
                    android:gravity="center"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/text_quanlity_follow"
                    android:textSize="@dimen/_10ssp"
                    android:gravity="center"
                    android:textColor="@color/color_main"
                    android:textStyle="bold"
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/text_following_main"
                    android:textSize="@dimen/_10ssp"
                    android:gravity="center"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/text_quanlity_following_main"
                    android:textSize="@dimen/_10ssp"
                    android:gravity="center"
                    android:textColor="@color/color_main"
                    android:textStyle="bold"
                    />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintBottom_toTopOf="@+id/button">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_shortcut_email"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/text_email_main"
                    android:textSize="@dimen/_10ssp"
                    android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_shortcut_phone_iphone"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/text_phone_numbeer_main"
                    android:textSize="@dimen/_10ssp"
                    android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_shortcut_group_add"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/text_add_group_main"
                    android:textSize="@dimen/_10ssp"
                    android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_shortcut_mode_comment"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/text_all_comment_main"
                    android:textSize="@dimen/_10ssp"
                    android:gravity="center_vertical"/>

        </LinearLayout>
    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_follow_main"
            android:paddingStart="@dimen/padding_left_btn_follow"
            android:paddingEnd="@dimen/padding_right_btn_follow"
            android:layout_gravity="center"
            android:background="@drawable/background_btn_follow"
            android:textColor="#fff"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.942"
            android:id="@+id/button"/>

</android.support.constraint.ConstraintLayout>